--- a/Wenters.mw
+++ b/Wenters.mw
@@ -19,20 +19,20 @@ postkode = 7100-7109, 7113, 7115, 7119 |
 webstie = [http://www.winterswijk.nl www.winterswijk.nl]
 }}
 
-'''Wenters''' of '''Wenterswiek''' ([[Nederlaands|Nederlands]]: ''Winterswijk'') is een darp en [[Gemiente (bestuur)|gemeente]] in et uterste oosten van den [[Achterhook]].       Et was bi-j de gemeenteleke herindeling van 1 januari 2005 de enige Achterhookse gemeente dee't ongewiezigd bleef.       De gemeente hef op 1 mei 2006 29.159 inwonners en een oppervlak van 138,29 km² (bron: CBS). De gemeente wödt an dree zieden umslotten deur [[Duutslaand]]. 
+'''Wenters''' of '''Wenterswiek''' ([[Nederlaands|Nederlands]]: ''Winterswijk'') is een darp en [[Gemiente (bestuur)|gemeente]] in et uterste oosten van den [[Achterhook]].   Et was bi-j de gemeenteleke herindeling van 1 januari 2005 de enige Achterhookse gemeente dee't ongewiezigd bleef.    De gemeente hef op 1 mei 2006 29.159 inwonners en een oppervlak van 138,29 km² (bron: CBS). De gemeente wödt an dree zieden umslotten deur [[Duutslaand|Duutsland]]. 
 
 == Wonkernen ==
 De gemeente Wenters hef de volgende wonkernen:
 
-[[Meddo]], [[Huppel]], [[Henxel]], [[Ratum]], [[Brinkheurne]], [[Kotten]], [[Woold (buurtschop)|Woold]], [[Miste]], [[Kolle]] en Wenters (Winterswijk).
+[[Meddo]], [[Huppel]], [[Henxel]], [[Ratum]], [[Brinkheurne]], [[Kotten]], [[Woold (buurtschop)|Woold]], [[Miste]], [[Kolle]] en Wenters (of Wenterswiek, NL Winterswijk).
 
 == Geschiedenis ==
-Haost wal zeker is ut darp Wenters al meer as 1000 jaor old. Et oldste document waoroet blik dat et karspel (parochie) Wenters besteet is ne lieste van inkomsten van de [[Mauritsstift]] in Mönster ([[Münster (stad)|Münster]] [[Duutslaand]]). Dit geschrift kump oet de eerste jäöre van de 11e eeuw. Daoroet kan wodden op-emaakt dat et darp al veur 1000 nao Christus beston. Et is ok haost wal zeker dat de stichting van et darp samenhing met de bouw van ne karke. De oldste berichten hebt et jao aover de "Parochia Wenterswiek" of vermeldt in elk geval dat der nen geesteliken warken.
+Haost wal zeker is et darp Wenters al meer as 1000 jaor old. Et oldste document waoroet blik dat et karspel (parochie) Wenters besteet is 'ne lieste van inkomsten van de [[Mauritsstift]] in Mönster ([[Münster (stad)|Münster]], [[Duutslaand|Duutsland]]). Dit geschrift kump oet de eerste jäöre van de 11e eeuw. Daoroet kan wodden op-emaakt dat et darp al veur 1000 nao Christus beston. Et is ok haost wal zeker dat de stichting van et darp samenhing met de bouw van 'ne karke. De oldste berichten hebt et jao aover de "Parochia Wenterswiek" of vermeldet in elk geval dat der 'nen geesteliken warken.
 
-aover de betekenisse van de name "Wenterswiek" (Wenters) loopt de meningen nogal oeteen. Et meest annemmelik is, dat de name is ontstaon oet nen in onbruuk eraakte persoonsname. In historische geschriften komt de volgende namen veur: Winterswyk, Winethereswick, Winriswic en Wenterswic. Wic is de olde benaming veur plaatse of wiek. Den persoon wel at daor ewond mot hebben zol dan Wenether, Winitar of Winter hebben eheten. 
+Aover de betekenisse van de name "Wenterswiek" (Wenters) loopt de meningen nogal oet-ene. Et meest annemmelik is, dat den name ontstaon is oet 'nen in onbruuk eraakte persoonsname. In historische geschriften komt de volgende namen veur: Winterswyk, Winethereswick, Winriswic en Wenterswic. Wic is de olde benaming veur plaatse of wiek. Den persoon wel at daor ewond mot hebben zol dan Wenether, Winitar of Winter hebben eheten. 
 
 == Geologie ==
-Wenters steet bekend um zien [[coulissenlandschap]] en [[steengroeve]] met fossiele resten. An et ende van et [[tertiair]] hef et grootste deel van [[Nederlaand]] onder water estoane. Allene [[Zuud-Limburg]] en Wenters lagen baoven et wateroppervlak. Maor ok Wenters hef wal ooit onder et wateroppervlak elaegen.
+Wenters steet bekend umme zien [[coulissenlandschap]] en [[steengroeve]] met fossiele resten. An et ende van et [[tertiair]] hef et grootste deel van [[Nederlaand|Nederland]] onder water estoane. Allene [[Zuud-Limburg]] en Wenters lagen baoven et wateroppervlak. Maor ok Wenters hef wal ooit onder et wateroppervlak elaegen.
 
 == Zettelverdealing gemeenteroad ==
 De [[gemeenteroad|gemeenteraod]] van Wenters besteet uit 21 zettels. Hieronder steet de samenstelling van de gemeenteraod sund 1994:
@@ -60,7 +60,7 @@ De [[gemeenteroad|gemeenteraod]] van Wenters besteet uit 21 zettels. Hieronder s
 
 == Vervoer ==
 [[Ofbeelding:Wenterswiek_nijstraote.jpg|thumb|left|200px|Ni-jstraote in Wenters]]
-Tot in et midden van de 18e eeuw lag Wenters vri-j boetenaf en wodden (en wödt nog altied) in'eslotten deur [[Duutslaand|Prusen]] (Duutslaand). Et meeste vervoer mos aover slecht begaonbaore waege gaon. Daor kwam verandering in do de weg [[Buorken|Borken]] (Duutsland) via Wenters nao [[Grolle]], [[Zutfent]] en [[Deaventer|Daeventer]] an-elegd wodden. In 1878 wodden et spoor [[Zutfent]]-Wenters an-elegd. Daormet wodden Wenters oetendelik warkelik onslotten. Later wodden ok de liene [[Zevenaar|Zaender]]-Wenters en de Borkense bane an-elegd. De GOLS (Gelders Overijsselse Lokaal Spoorweg) leggen ok de bane Wenters-[[Nee]] (Neede) an. Wenters wodden daormet een waor spoorwegcentrum. Tegeliek met de opkomst van den trein kwam ok de textielindustrie in Wenters tot grote bleui. De Borkense bane en de spoorliene nao [[Nee]] bunt allange weer eslotten. Maor et imposante [[station Wenters]] besteet nog steeds en getuugt nog van een groots verleden. Tegenswoordigs riedt der nog de lokale [[Syntus]] treinen nao [[Zutfent]] en [[Arnem|Arem]].Ok is ter nog ne bane nao Bokelt ewes
+Tot in et midden van de 18e eeuw lag Wenters vri-j boetenaf en wodden (en wödt nog altied) in'eslotten deur [[Duutslaand|Prusen]] (Duutsland). Et meeste vervoer mos aover slecht begaonbaore waege gaon. Daor kwam verandering in do de weg [[Buorken|Borken]] (Duutsland) via Wenters nao [[Grolle]], [[Zutfent]] en [[Deaventer|Daeventer]] an-elegd wodden. In 1878 wodden et spoor [[Zutfent]]-Wenters an-elegd. Daormet wodden Wenters oetendelik warkelik onslotten. Later wodden ok de liene [[Zevenaar|Zaender]]-Wenters en de Borkense bane an-elegd. De GOLS (Gelders Overijsselse Lokaal Spoorweg) leggen ok de bane Wenters-[[Nee]] (Neede) an. Wenters wodden daormet een waor spoorwegcentrum. Tegeliek met de opkomst van den trein kwam ok de textielindustrie in Wenters tot grote bleui. De Borkense bane en de spoorliene nao [[Nee]] bunt allange weer eslotten. Maor et imposante [[station Wenters]] besteet nog steeds en getuugt nog van een groots verleden. Tegenswoordig riedt der nog de lokale [[Syntus]] treinen nao [[Zutfent]] en [[Arnem|Arem]].Ok is ter nog ne bane nao Bokelt ewes
 == Te zeen in Wenters ==
 
 * [[Stichting Freriks|Freriks museum]]
@@ -69,11 +69,11 @@ Tot in et midden van de 18e eeuw lag Wenters vri-j boetenaf en wodden (en wödt 
 * [[Steengroeve]]
 
 == Bekende leu oet Wenters ==
-* [[Jannie Konings-Nijweide]], Achterhookse skriefster.
-* [[Gerrit Komrij]], skriever in 't Hollands
+* [[Jannie Konings-Nijweide]], Achterhookse schriefster.
+* [[Gerrit Komrij]], schriever in 't Hollands
 
 == Oetgaonde verwiezing ==
-* [http://www.wentersplat.nl Wentersplat] Webstea in en oaver het dialekt van Wenters
+* [http://www.wentersplat.nl Wentersplat] Webstae in en aover et dialekt van Wenters
 * [http://www.winterswijk.org Winterswijk.org]
 
 == Nedersaksisch ==
