--- a/The_X-Files.mw
+++ b/The_X-Files.mw
@@ -1,10 +1,10 @@
 [[Bestaand:The_X-Files_title_logo.png|thumb]]
 
-'''The X-Files''' is een Amerikaanske [[science fiction]] drama televisyryge, bedached döär [[Chris Carter]]. Et hevt op TV espöäled van 1993 töt 2002 up de sender [[Fox]]. Med et loupen van de ryge hevt der een [[bioskoopfilm]] ewesd en later, toon as de ryge neet meyr draeien nå 9 seisunen, hevt der noch een film ewesd. In 2016 bint sy wear begünnet med et draeien van nye seisunen. Wårvan et 11. seisuun in january 2018 begünden. In de jåren '90 van de vöärige eywe was de ryge slim bekend en wördden wekkeliks döär milyonen bekekken. 
+'''The X-Files''' is een Amerikaanske [[science fiction]] drama televisyryge, bedached döär [[Chris Carter]]. Et hevt op TV espöäled van 1993 töt 2002 up de sender [[Fox]]. Med et loupen van de ryge hevt der een [[bioskoopfilm]] ewesd en later, toon as de ryge neet meyr dräien nå 9 seisonen, hevt der noch een film ewesd. In 2016 bint sy wear begünnet med et dräien van nye seisonen. Wårvan et 11. seisoon in january 2018 begünden. In de jåren '90 van de vöärige eywe was de ryge slim bekend en wördden wekkeliks döär milionen bekekken. 
 
-Et draeit ümme de FBI-agenten [[Fox Mulder]] en [[Dana Scully]] den de X-Files undersöökt. De X-Files is een ofdeyling binnen de FBI, dee geyt oaver neet-up-elöste en vrümde en unverklårbare saken. Dana Scully is een weatenskoppelike vrouwe, dee höör vrågen hevt by et unverklårbare en wil et ait med verstand bekyken. Fox Mulder wördden up de FBI-skole 'Spooky Mulder' enömed, ümdat hee jüüste gelövt in dinge  as [[magie|magy]], [[geestn|geysten]], [[buteneerds leven|butenaerdse weasens]] en so meyr.
+Et dräit ümme de FBI-agenten [[Fox Mulder]] en [[Dana Scully]] den de X-Files undersöket. De X-Files is een ofdealing binnen de FBI, dee geyt oaver neet-up-elöste en vrümde en unverklårbare saken. Dana Scully is een weatenskoppelike vrouwe, dee höyr vrågen hevt by et unverklårbare en wil et ait med verstand bekyken. Fox Mulder wördden up de FBI-skole 'Spooky Mulder' enömed, ümdat hee jüüste gelövt in dinge  as [[magie|magy]], [[geestn|geysten]], [[buteneerds leven|butenaerdse weasens]] en so meyr.
 
-De ryge kün y in tweyen updeylen: 'monster of the week'-ofleaverings , wat lösstånde ofleaverings bint med vrümde saken. Én de roude lyne in de ryge, den geyt oaver butenaerdse weasens en de geheime regearing dee med ear samenwarkt. Disse roude lyne vertelt ouk meyr oaver Mulder en Scullys persoonlike leaven en düt et ouk vlink ter hoape loupen.
+De ryge kün y in tweyen updealen: 'monster of the week'-ofleaverings , wat lösstånde ofleaverings bint med vrümde saken. Én de roude lyne in de ryge, den geyt oaver butenaerdse weasens en de geheime regearing dee med ear samenwarkt. Disse roude lyne vertelt ouk meyr oaver Mulder en Scullys persoonlike leaven en düt et ouk vlink ter hoape loupen.
 
 
 {{Dialekt|sdz}}
