--- a/Reggae.mw
+++ b/Reggae.mw
@@ -1,13 +1,13 @@
 [[Bestaand:Bob-Marley-in-Concert Zurich 05-30-80.jpg|thumb|right|250px|Bob Marley, n bekeandstn Reggae-artiest]]
-'''Reggae''' is nen [[Jamaika]]ansen muziekstiel wat in de joarn '60 van den [[20e eeuw|20sten eeuw]] onstoan is oet [[ska]]. Et belangriekste kenmoark is wellicht et [[noapikken]]; den [[gitaar|slaggitaar]], een [[örgel|Hammondörgel]] en mangs nen [[piano]] spölt noa iederen tel een [[stakkato]] [[dreeklaank]]. Dit gef een kort ''tsjak''-geluud wat bekeand steet as de ''skank''. Aander kenmoarken zeent et troage [[tempo]] (tusken 60 en 80 [[BPM]], [[Reggae#Ondudelikheaid_oawer_et_tellen|ofhaankelik van wo as iej et telt]]) en nen oawerheersenden [[basgitaar]] wat een heel nummer duur een zelfde [[ritme]] spölt. 
+'''Reggae''' is nen [[jamaika]]ansken musikstyl wat in de jåren '60 van de [[20e eeuw|20e eywe]] untstån is uut [[ska]] en [[rocksteady]]. Et meyst kenmarkende an reggae is wellicht et [[noapikken|nåpikken]]: nen [[gitaar]] en [[örgel]] (en mangs nen [[piano]]) dee nå yderen tel een [[stakkato]] [[dreyklank]] spöllet. Dit gevt een kort ''tsjak''-gelüüd, wat reggaeleevhebbers de ''skank'' nömet. Andere kenmarken sint een verholdingswys tråg tempo (tüsken de 60 en 80 [[BPM]], [[Reggae#Ondudelikheaid_oawer_et_tellen|ofhaankelik van wo as iej et telt]])) en nen oaverheyrsenden [[basgitaar]] den as et heyle nummer döär etselvde [[ritme]] spölt.
 
-Reggaeteksen goat vake oawer serieuze dinge, zooas leefde, oarmood, sosjale probleme, et leawen in de [[sloppenwieken]] en vrieheaid (van een vroger slawen-bestoan). Nommers met zulke tekste wordt mangs ''roots reggae'' of ''conscious reggae'' (bewuste reggae) eneumd. Roots reggae wörd vake meteen met [[marihuana]] in verbaand ebracht. Dit keump duurdet reggae völle duur anhangers van et [[rastafarianisme]] espöld wörd. Dee rookt mangs marihuana vuur öare geleuwsbeleawing.
+Teksten in reggae gåt vake oaver seriöse underwarpen, so as leevde, årmood, sociale problemen, et leaven in sloppenwyken en vryheid (van een vroger [[slavernye|slavenbestån]]). Nummers med dat soort teksten wordet vake ''roots reggae'''of ''conscious reggae'' (bewüsten reggae) nömed. Roots reggae wörd vake in eynen åsem nömed med [[marihuana]]. Dit kümt döärdat reggae vake döär anhangers van et [[rastafarianisme]] spölled wördt. Dee rouket mangs marihuana vöär öäre gelöyvsbeleaving.
 
-Duurdet onmeundig völle ärtieste met reggae an et oetproberen zeent egoan, bestoat der rechtevoort verskillende soorten reggae, zo as [[roots reggae]], [[lovers rock]], [[dancehall reggae]], [[dub]], [[raggamuffin]], en zo wiedter. Der wörd wal es beweard at oet Reggae ook wier nieje muziekstielen ontstoan zeent, zo as [[dance]], [[hiphop]], [[drum 'n' bass]] en niejer nog [[dubstep]].
+Döärdat unmündig vöäle artysten med reggae an et uutproberen egån sint, beståt der rechtevoort verskillende soorten reggae, so as [[roots reggae]], [[lovers rock]], [[dancehall reggae]], [[dub]] en [[raggamuffin]]. Ouk wördt bewäärd dat uut reggae ouk wear nye musikstylen unstån sint so as [[dance]], [[hiphop]], [[drum 'n' bass]] en [[dubstep]].
 
-Den Bekeandsten reggae-artiest, mer lange neet den ennigsten, is zoonder twiefel [[Bob Marley]] oet [[Jamaika]]. Duur um wör reggae ook boeten Jamaika bekeand. Hee was den eersten reggae-artiest den as internasjonaal duur breuk. Zin album ''Legend'' is nog aait et bestverkopende reggae-album van alle tieden.
+Wellicht den bekendsten, mär lange nit den eanigsten reggae-artyst is [[Bob Marley]]. Hee makeden reggae ouk buten Jamaika bekend en was den eyrsten reggaeartyst den as internationaal döärbröäk. Syn album ''Legend'' is noch altyd et best verkoupende reggae-album.
 
-== Naamsverkloaring ==
+== Naamsverklåring ==
 Der zeent verskillende verhalen oawer et ontstoan van de naam, dee as allemoal ginne volledige verkloaring geewt. Den Jamaikaansen band [[Toots & The Maytals]] beweart det zee den naam vuur et eerst gebroekt hebt in öar nummer ''Do the Reggay''. Volgens aanderen is et woard ''reggae'' ne [[onomatopee]] wat et noapikgeluud noadut.
 
 == Et ontstoan ==
