*Empty MediaWiki Message*

--- a/Anarcho-primitivisme.mw
+++ b/Anarcho-primitivisme.mw
@@ -1,8 +1,10 @@
-'''Anarchoprimitivisme''' is et idey dat mensken et vöär dat ze landbouw begünnen et med mekare vöäl beater hadden en good med de natuur ümme eer hen samen leavden. De denkers van disse strouming bint der van oavertüügt dat toon mensken as [[jager-verzamelaar|jagers en gadderaars]] oavergüngen når landbouwers, dat et allemåle de verkeyrde kante up güngen. Van vrye deren wördden sy mensken dee sich up eyne steade setten, wår der verdeyling van de sociale klassen, underdrükking en vervrömding van kwam. Anarcho
+'''Anarcho-primitivisme''' is et idey dat mensken et vöär dat ze landbouw begünnen et med mekare vöäl better hadden en good med de natuur ümme ear hen samen leyvden. De denkers van disse ströyming bint der van oavertüügt dat toon mensken as [[jager-verzamelaar|jagers en gadderaars]] oavergüngen når landbouwers, dat et allemåle de verkeyrde kante up güngen. Van vrye deren wördden sy mensken dee sich up eyne steade setten, wår der verdealing van de sociale klassen, underdrükking en vervrümding van kwam. Anarcho
 
-Anarchoprimitivisten pleit veur 'n terugge keer naor 'n onbeschaafn meniere van leewm deur middel van ont-industrialisatie, ofschaffing van arbeidsverdeling of spesjalisatie, en 't ofstaand nemmn van grootschaolige organisatietechnologien. D'r bestaot ok aandere, niet-anarchistiese variaantn van 't primitivisme, en nie alle primitivisn wiest 'tzölfde verschiensel an as de bronne van de huudige beschavingsprobleemn.
+Anarcho-primitiven bint der vöär dattet wy wearümme gån müttet når een wyse van leyven, dee wy hadden vöär dattet wy 'beskaavd' wördden. Dårümme bint se der vöär ümme alle industry vord te halen, alle warkverdealing en specialisaty müt wear vord. Ofwal alle groute organisatys müt up eheaven wörden. Mar der beståt ouk wal andere neet-anarchistiske primitiven. Ouk neet alle primitiven hebbet et sülvde ideye oaver wår as et probleym van de beskaving vandån kümt.
 
-Veul traditionele anarchistn verwarpt de kritiek op de beschaving, waorbi'j völle ontkent dat anarchoprimitivisme iets te maakn hef met anarchisme, terwel sommign, zo as Wolfi Landstreicher, die kritiek wel onderschrieft, mar zichzölf nie as anarchoprimitivisn beschouwt. Anarchoprimitivistn wörd vake kenmarkt deur hun gerichtheid op 't daodwarklik bereikn van 'n netuurlike toestaand deur ''verwildering''.
+De meyste anarchisten müttet niks hebben van ho as de primitiven kykt når de beskaving. Anarcho-primitivisme is ouk vaaks neet écht anarchisme, mar wil wal dat de heyrskappye van de mensken up disse planeyte töt et versten terügge edrüngen wörd. Et geyt ümmedattet wy oanse plaatse good weatet inet ekosysteym, en alle bedachede reagels en traditys -dee de natuurlike vryheid van de menske (en andere deren) ofnemt- vord müt. Disse vervrümding med oanse natuurlike weasen en de natuurlike wearld willet se vord doon.
+
+Sommigen van ear seet de olde stammen-leyvenswyse as een [[utopy]], as ho et good warkeden. Vöäle anarcho-primitiven doot vaaks ouk probeyren üüt de måtskappye te gån en sülv vöärsenend te leyven gån: ''rewilding'' wörd dat enöömt.
 
 {{Dialekt|sdz}}
 
