--- a/Anarcho-primitivisme.mw
+++ b/Anarcho-primitivisme.mw
@@ -8,7 +8,7 @@ Sommigen van ear seet de olde stammen-leyvenswyse as een [[utopy]], as ho et goo
 
 ==Denkers==
 Bekende skryvers bint under ander:
-*[[Daniel Quinn]] (up syn book [[Ishmael]] is een film üüt 1999 ebaseyred: [[Instinct]], med [[Anthony Hopkins]] in de höyvdrolle)
+*[[Daniel Quinn]] (up syn book [[Ishmael (roman)|Ishmael]] is een film üüt 1999 ebaseyred: [[Instinct]], med [[Anthony Hopkins]] in de höyvdrolle)
 *[[John Zerzan]]
 *[[Theodore Kaczynski]]
 
