*Empty MediaWiki Message*

--- a/Anarcho-primitivisme.mw
+++ b/Anarcho-primitivisme.mw
@@ -2,7 +2,7 @@
 
 Anarcho-primitiven bint der vöär dattet wy wearümme gån müttet når een wyse van leyven, dee wy hadden vöär dattet wy 'beskaavd' wördden. Dårümme bint se der vöär ümme alle industry vord te halen, alle warkverdealing en specialisaty müt wear vord. Ofwal alle groute organisatys müt up eheaven wörden. Mar der beståt ouk wal andere neet-anarchistiske primitiven. Ouk neet alle primitiven hebbet et sülvde ideye oaver wår as et probleym van de beskaving vandån kümt.
 
-De meyste anarchisten müttet niks hebben van ho as de primitiven kykt når de beskaving. Anarcho-primitivisme is ouk vaaks neet écht anarchisme, mar wil wal dat de heyrskappye van de mensken up disse planeyte töt et versten terügge edrüngen wörd. Et geyt der ümme dattet wy oanse plaatse good weatet inet ekosysteym, en alle bedachede reagels en traditys -dee de natuurlike vryheid van de menske (en andere deren) ofnemt- vord müt. Disse vervrümding med oanse natuurlike weasen en de natuurlike wearld willet se vord doon.
+De meyste anarchisten müttet niks hebben van ho as de primitiven kykt når de beskaving. Anarcho-primitivisme is ouk vaaks neet écht anarchisme, et anarchisme ligt der in, dat sy de heyrskappye van de mensken up disse planeyte en oaver mekare töt et versten terügge edrüngen hebben willet. Et geyt der ümme dattet wy oanse plaatse good weatet inet ekosysteym, en alle bedachede reagels en traditys -dee de natuurlike vryheid van de menske (en andere deren) ofnemt- vord müt. Disse vervrümding med oanse natuurlike weasen en de natuurlike wearld willet se vord doon.
 
 Sommigen van ear seet de olde stammen-leyvenswyse as een [[utopy]], as ho et good warkeden. Vöäle anarcho-primitiven doot vaaks ouk probeyren üüt de måtskappye te gån en sülv vöärsenend te leyven gån: ''rewilding'' wörd dat enöömt.
 
