*Empty MediaWiki Message*

--- a/Anarcho-primitivisme.mw
+++ b/Anarcho-primitivisme.mw
@@ -1,6 +1,6 @@
-'''Anarcho-primitivisme''' is et ideye dat mensken et, vöär dat se landbouw begünnen, med mekare vöäl better hadden en good med de natuur ümme ear hen samen leyvden. De denkers van disse ströyming bint der van oavertüügt dat toon mensken as [[jager-verzamelaar|jagers en gadderaars]] oavergüngen når landbouwers, dat et allemåle de verkeyrde kante up güngen. Van vrye deren wördden sy mensken dee sich up eyne steade setten, wår der verdealing van de sociale klassen, underdrükking en vervrümding van kwam. Anarcho
+'''Anarcho-primitivisme''' is et idey dat mensken et, vöär dat se landbouw begünnen, med mekare vöäl better hadden en good med de natuur ümme ear hen samen leyvden. De denkers van disse ströyming bint der van oavertüügt dat toon mensken as [[jager-verzamelaar|jagers en gadderaars]] oavergüngen når landbouwers, dat et allemåle de verkeyrde kante up güngen. Van vrye deren wördden sy mensken dee sich up eyne steade setten, wår der verdealing van de sociale klassen, underdrükking en vervrümding van kwam. Anarcho
 
-Anarcho-primitiven bint der vöär dattet wy wearümme gån müttet når een wyse van leyven, dee wy hadden vöär dattet wy 'beskaavd' wördden. Dårümme bint se der vöär ümme alle industry vord te halen, alle warkverdealing en specialisaty müt wear vord. Ofwal alle groute organisatys müt up eheaven wörden. Mar der beståt ouk wal andere neet-anarchistiske primitiven. Ouk neet alle primitiven hebbet et sülvde ideye oaver wår as et probleym van de beskaving vandån kümt.
+Anarcho-primitiven bint der vöär dattet wy wearümme gån müttet når een wyse van leyven, dee wy hadden vöär dattet wy 'beskaavd' wördden. Dårümme bint se der vöär ümme alle industry vord te halen, alle warkverdealing en specialisaty müt wear vord. Ofwal alle groute organisatys müt up eheaven wörden. Mar der beståt ouk wal andere neet-anarchistiske primitiven. Ouk neet alle primitiven hebbet et sülvde idey oaver wår as et probleym van de beskaving vandån kümt.
 
 De meyste anarchisten müttet niks hebben van ho as de primitiven kykt når de beskaving. Anarcho-primitivisme is ouk vaaks neet écht anarchisme, et anarchisme ligt der in, dat sy de heyrskappye van de mensken up disse planeyte en oaver mekare töt et versten terügge edrüngen hebben willet. Et geyt der ümme dattet wy oanse plaatse good weatet in et ekosysteym, en alle bedachede reagels en traditys -dee de natuurlike vryheid van de menske (en andere deren) ofnemt- vord müt. Disse vervrümding med oanse natuurlike weasen en de natuurlike wearld willet se vord doon.
 
