*Empty MediaWiki Message*

--- a/Anarcho-primitivisme.mw
+++ b/Anarcho-primitivisme.mw
@@ -1,4 +1,4 @@
-'''Anarcho-primitivisme''' is et idey dat mensken et, vöär dat se landbouw begünnen, med mekare vöäl better hadden en good med de natuur ümme ear hen samen leyvden. De denkers van disse ströyming bint der van oavertüügt dat toon mensken as [[jager-verzamelaar|jagers en gadderaars]] oavergüngen når landbouwers, dat et allemåle de verkeyrde kante up güngen. Van vrye deren wördden sy mensken dee sich up eyne steade setten, wår der verdealing van de sociale klassen, underdrükking en vervrümding van kwam. Anarcho
+'''Anarcho-primitivisme''' is et idey dat mensken et, vöär dat se landbouw begünnen, med mekare et vöäl better hadden en good med de natuur ümme ear hen samen leyvden. De denkers van disse ströyming bint der van oavertüügt dat toon mensken as [[jager-verzamelaar|jagers en gadderaars]] oavergüngen når landbouwers, dat et allemåle de verkeyrde kante up güngen. Van vrye deren wördden sy mensken dee sich up eyne steade setten, wår der verdealing van de sociale klassen, underdrükking en vervrümding van kwam. Anarcho
 
 Anarcho-primitiven bint der vöär dattet wy wearümme gån müttet når een wyse van leyven, dee wy hadden vöär dattet wy 'beskaavd' wördden. Dårümme bint se der vöär ümme alle industry vord te halen, alle warkverdealing en specialisaty müt wear vord. Ofwal alle groute organisatys müt up eheaven wörden. Mar der beståt ouk wal andere neet-anarchistiske primitiven. Ouk neet alle primitiven hebbet et sülvde idey oaver wår as et probleym van de beskaving vandån kümt.
 
