Doorverwijzing naar [[Bates Motel (televisysery)]] verwijderd

--- a/Bates_Motel.mw
+++ b/Bates_Motel.mw
@@ -1,1 +1,6 @@
-#DEURVERWIEZING [[Bates Motel (televisysery)]]
+'''Bates Motel''' kan verwysen når: 
+
+*[[Bates Motel (televisysery)]] - een televisysery üüt 2013
+*[[Bates Motel (film)]] - een film üüt 1987
+
+{{dv}}
