*Empty MediaWiki Message*

--- a/Bates_Motel_(televisysery).mw
+++ b/Bates_Motel_(televisysery).mw
@@ -13,7 +13,7 @@ De sery begint in [[Arizona]] mid de doud van Normas man, wårnå se et ''Seafai
 * [[Olivia Cooke]] – Emma Decody
 * [[Nicola Peltz]] – Bradley Martin
 * [[Nestor Carbonell]] – Sheriff Alex Romero
-* [[Mike Vogel]] – Visesheriff Zack Shelby <small>(sesong 1)</small>
+* [[Mike Vogel]] – Visesheriff Zack Shelby <small>(seisoon 1)</small>
 * Keegan Connor Tracy – Miss Watson <small>(seisoon 1)</small>
 * [[Ian Hart]] – Will Decody
 * Jere Burns – Jake Abernathy <small>(seisoon 1)</small>
