*Empty MediaWiki Message*

--- a/Anarcho-primitivisme.mw
+++ b/Anarcho-primitivisme.mw
@@ -1,14 +1,14 @@
-'''Anarcho-primitivisme''' is et idey dat mensken et, vöär dat se landbouw begünnen, med mekare et vöäl better hadden en good med de natuur ümme ear hen samen leyvden. De denkers van disse ströyming bint der van oavertüügt dat toon mensken as [[jager-verzamelaar|jagers en gadderaars]] oavergüngen når landbouwers, dat et allemåle de verkeyrde kante up güngen. Van vrye deren wördden sy mensken dee sich up eyne steade setten, wår der verdealing van de sociale klassen, underdrükking en vervrümding van kwam. Anarcho
+'''Anarcho-primitivisme''' is et idee dat mensken et, vöär dat se landbouw begünnen, med mekare et vöäl better hadden en good med de natuur ümme ear hen samen leavden. De denkers van disse ströyming bint der van oavertüged dat toon mensken as [[jager-verzamelaar|jagers en gadderaars]] oavergüngen når landbowers, dat et allemåle de verkeyrde kante up güngen. Van vrye deren wördden see mensken dee sik up eyne steade setten, wår der verdealing van de sociale klassen, underdrükking en vervrümding van kwam. 
 
-Anarcho-primitiven bint der vöär dattet wy wearümme gån müttet når een wyse van leyven, dee wy hadden vöär dattet wy 'beskaavd' wördden. Dårümme bint se der vöär ümme alle industry vord te halen, alle warkverdealing en specialisaty müt wear vord. Ofwal alle groute organisatys müt up eheaven wörden. Mar der beståt ouk wal andere neet-anarchistiske primitiven. Ouk neet alle primitiven hebbet et sülvde idey oaver wår as et probleym van de beskaving vandån kümt.
+Anarcho-primitiven bint der vöär dattet wy weaderümme gån müttet når een wyse van leaven, dee wy hadden vöär dattet wy 'beskaavd' wördden. Dårümme bint se der vöär ümme alle industry vord te halen, alle warkverdealing en specialisaty müt weader vord. Ofwal alle groute organisatys müt upeheaven wörden. Mar der beståt ouk wal andere neet-anarchistiske primitiven. Ouk neet alle primitiven hebbet etsülvde idee oaver wår as et probleem van de beskaving vandån kümt.
 
-De meyste anarchisten müttet niks hebben van ho as de primitiven kykt når de beskaving. Anarcho-primitivisme is ouk vaaks neet écht anarchisme, et anarchisme ligt der in, dat sy de heyrskappye van de mensken up disse planeyte en oaver mekare töt et versten terügge edrüngen hebben willet. Et geyt der ümme dattet wy oanse plaatse good weatet in et ekosysteym, en alle bedachede reagels en traditys -dee de natuurlike vryheid van de menske (en andere deren) ofnemt- vord müt. Disse vervrümding med oanse natuurlike weasen en de natuurlike wearld willet se vord doon.
+De meyste anarchisten müttet niks hebben van ho as de primitiven kyket når de beskaving. Anarcho-primitivisme is ouk vaaks neet écht anarchisme, et anarchisme ligt derin dat see de heyrskappye van de mensken up disse planete en oaver mekare töt et versten terügge edrüngen hebben willet. Et geyt derümme dattet wy unse plaatse good weatet in et ekosysteem, en alle bedachte reagels en traditys -dee de natüürlike vryheid van de menske (en andere deren) ofnemt- vord müt. Disse vervrümding med unse natüürlike weasen en de natüürlike wearld willet se vord doon.
 
-Sommigen van ear seet de olde stammen-leyvenswyse as een [[utopy]], as ho et good warkeden. Vöäle anarcho-primitiven doot vaaks ouk probeyren üüt de måtskappye te gån en sülv vöärsenend te leyven gån: ''rewilding'' wörd dat enöömt.
+Sommigen van ear seet de olde stammenleavenswyse as een [[utopy]], as ho et good warkeden. Vöäle anarcho-primitiven doot vaaks ouk proberen üüt de måtskappye te gån en sülv vöärsenend te leaven gån: ''rewilding'' wördt dat enöömd.
 
 ==Denkers==
-Bekende skryvers bint under ander:
-*[[Daniel Quinn]] (up syn book [[Ishmael (roman)|Ishmael]] is een film üüt 1999 ebaseyred: [[Instinct]], med [[Anthony Hopkins]] in de höyvdrolle)
+Bekende skryvers bint under andere:
+*[[Daniel Quinn]] (up syn book [[Ishmael (roman)|Ishmael]] is een film üüt 1999 ebaseerd: [[Instinct]], med [[Anthony Hopkins]] in de höyvdrolle)
 *[[John Zerzan]]
 *[[Theodore Kaczynski]]
 
