/* Oetgoande verwiezings */ http => https

--- a/Robaais.mw
+++ b/Robaais.mw
@@ -7,9 +7,9 @@ De stad was belangriek bie de opkomst van de industriële revolusie in Noord-Fra
 Robaais is veural bekeand vanweage de [[Wielrennen|klassieker]] Paries-Robaais.
 
 == Oetgoande verwiezings ==
-* [http://www.ville-roubaix.fr/ Officiële webstea van de gemeente] <small>(Frans)</small>
-* [http://www.roubaixtourisme.com/ Officiële webstea veur toerisme] <small>(Frans) (Engels) (Nederlands)</small>
-* [http://www.roubaix-lapiscine.com/ Officiële webstea van et kunst- en industriemuseum] <small>(Frans)</small>
+* [https://www.ville-roubaix.fr/ Officiële webstea van de gemeente] <small>(Frans)</small>
+* [https://www.roubaixtourisme.com/ Officiële webstea veur toerisme] <small>(Frans) (Engels) (Nederlands)</small>
+* [https://www.roubaix-lapiscine.com/ Officiële webstea van et kunst- en industriemuseum] <small>(Frans)</small>
 * [http://www.lamanufacture-roubaix.fr/ Officiële webstea van et textielmuseum] <small>(Frans) (Engels) (Nederlands)</small>
 {{Commonscat|Roubaix|Robaais}}
 
