SVG-versie van de vlag

--- a/Lingewaal.mw
+++ b/Lingewaal.mw
@@ -1,6 +1,6 @@
 {{Gemeante |
 naam = Lingewaal |
-bestaandsnaam vlagge = Vlag_Lingewaal.gif |
+bestaandsnaam vlagge = Lingewaal vlag.svg |
 bestaandsnaam woapn =|
 lokatie = LocatieLingewaal |
 proveensie =  |
