--- a/Lingewaal.mw
+++ b/Lingewaal.mw
@@ -1,7 +1,7 @@
 {{Gemeante |
 naam = Lingewaal |
 bestaandsnaam vlagge = Lingewaal vlag.svg |
-bestaandsnaam woapn =|
+bestaandsnaam woapn = Lingewaal wapen.svg |
 lokatie = LocatieLingewaal |
 proveensie =  |
 heufdplaats = [[Asperen]] | 
