--- a/Mustafa_Kemal_Atatürk.mw
+++ b/Mustafa_Kemal_Atatürk.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Atatürk.jpg|thumb|upright|''Mustafa Kemal Atatürk'']]
+[[Bestaand:Ataturk1930s.jpg|thumb|upright|''Mustafa Kemal Atatürk'']]
 '''Mustafa Kemal Atatürk''' (geboren op [[19 meie]] [[1881]] in [[Saloniki]] (tingwoordig [[Thessaloniki]] in [[Griekenlaand]]) – sturven op [[10 november]] [[1938]] in [[Istanbul]]) was een generaol en was de leider van [[Turkije]] van [[september]] [[1923]] tot an [[10 november]] [[1938]].
 
 {{DEFAULTSORT:Ataturk, Mustafa Kemal}}
