--- a/Kreenk_vuur_de_Twentse_Sproak.mw
+++ b/Kreenk_vuur_de_Twentse_Sproak.mw
@@ -1,8 +1,8 @@
-n '''Kreenk vuur de Twentse Sproak''' (vuur t gemak vake ofkortt töt ''KTS'') is ne vereniging dee't zik gangs hoaldt met t behoald en bevördering van de [[Tweants]]e sproak. Dit doot ze oonder mear duur [[Kaark (geleufsgemeenschap)|kaarkdiensen]] in t Tweants te hoalden en duur t opstellen vant [[Tweants Kwarteerken]], ne lesriege in en oaewr Tweants vuur op legere skolen. In t besteur zitt Joop Weber, Vera Wiefferink, Harry Groener en Karin Hagreize.
+n '''Kreenk vuur de Twentse Sproak''' (vuur t gemak vake ofkortt töt ''KTS'') is ne vereniging dee't zik gangs hoaldt met t behoald en bevördering van de [[Tweants]]e sproak. Dit doot ze oonder mear duur [[Kaark (geleufsgemeenschap)|kaarkdiensen]] in t Tweants te hoalden en duur t opstellen vant [[Tweants Kwarteerken]], ne lesriege in en oaewr Tweants vuur op legere skolen. In t besteur zitt o.a. Joop Weber, Alie van der Veer, Marlies Nijhuis. 
 
 Um de twee joar reikt ze de Anmodigingspries oet vuur leu dee't zik drok maakt vuur de Tweantse sproake.
 
-De KVTS-skriefwieze is oetbracht in t beuken ''Twents, hoo schrief iej dat''. Eent in de zovölle tied keump n Kreenk met n [[Bodbreef]], n blad in t plat vuur alle leden van n Kreenk. 
+De KVTS-skriefwieze is oetbracht in t beuken ''Twents, hoo schrief iej dat''. Eent in de zovölle tied keump n Kreenk met n [[Bodbreef]], n blad in t plat vuur alle leden van n Kreenk.
 
 == Oetgoande verbeending ==
 * [http://twenteakademie.nl/kreenk-vuur-de-twentse-sproak/index.php Offisjele webstea]
