--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -7,11 +7,9 @@ Umdät de artikels deur elke bezuker bewärkt kunnen worden, gef Wikipedia gien 
 
 Et Wikipedia-projekt is begunnen op [[15 jannewaori]] [[2001]], mär bestun toe alleend nog mär in et [[Engels]]. De eerste anderstalige versie was in et [[Frans]], en begun op [[23 meert]] [[2001]]. De [[Nedersaksiese Wikipedia|Nedersaksiese versie van Wikipedia]] is begunnen op [[23 meert]] [[2006]] en ef noe {{NUMBEROFARTICLES}} artikels. Et internetadres van de Nedersaksiese Wikipedia is http://nds-nl.wikipedia.org/. De [[Engels]]e versie is et grootst en ef roem 3.500.000 artikels. In totaal waren der in [[15 jannewaori]] [[2011]] meer as 17 miljoen artikels te vinden op iel Wikipedia in 278 verskillende talen en streektalen. 
 
-== Zie ok ==
-* [[Nedersaksiese Wikipedia]]
-* [[Platduutse Wikipedia]]
+Mijn konijn is 100000 geworden
 
-{{Dialekt|ovel|Attem|Algemene Nedersaksiese Skriefwieze}}
+{en het is het is echt waar
 
 [[Kategorie:Wikipedie| ]]
 [[Kategorie:Organisaotie]]
