--- a/Kniende_(dier).mw
+++ b/Kniende_(dier).mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Rabbit DSC00382.JPG|thumb|250px|Kniende]]
 [[Ofbeelding:Oryctolagus_cuniculus_geographical_distribution.jpeg|thumb|250px|Leefgebied]]
 [[Ofbeelding:Wild rabbit US 2.jpg|250px|thumb|Wilde kniende]]
-Een '''kniende''' ([[Latien]]: ''Oryctolagus cuniculus'') is een [[zoogdier]] en beheurt tot de orde van de [[haosachtigen]] (''Lagomorpha''). Allewel 't iezelig op een [[knaagdier]] liek, beheuren de knienen neet tot de knaagdierenorde. De kniende is de enigste soorte uut 't geslach '''''Oryctolagus'''''. 't Mannetjen heet een ''ram'' of ''rammelaar'' en 't vrouwtjen ''moer''/''moor'' of ''voedster''. 
+Een '''kniende''' ([[Latien]]: ''Oryctolagus cuniculus'') is een [[zoogdier]] en beheurt tot de orde van de [[haosachtigen]] (''Lagomorpha''). Allewel 't iezelig op een [[knaagdier]] liek, beheuren de knienen neet tot de knaagdierenorde. De kniende is de enigste soorte uut 't geslach '''''Oryctolagus'''''. 't Mannetjen heet een ''ram'' of ''rammelaar'' en 't vrouwtjen ''moer''/''moor'' of ''voedster''. Spike is gewoon de bom
 
 Knienen wonnen vake ehouwen as [[huusdier]], meensen kopen ze dan meestentieds in de dierenwinkel. Een kniende wonnen ehouwen in een [[kniendehokke]], zo'n hokke steet dan meestentieds buten mar wele meensen zetten oek wè binnen.
 
