Wiezigingen deur [[Special:Contributions/95.97.137.34|95.97.137.34]] hersteld tot de versie nao de leste wieziging deur [[User:Servien|Servien]]

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -7,9 +7,11 @@ Umdät de artikels deur elke bezuker bewärkt kunnen worden, gef Wikipedia gien 
 
 Et Wikipedia-projekt is begunnen op [[15 jannewaori]] [[2001]], mär bestun toe alleend nog mär in et [[Engels]]. De eerste anderstalige versie was in et [[Frans]], en begun op [[23 meert]] [[2001]]. De [[Nedersaksiese Wikipedia|Nedersaksiese versie van Wikipedia]] is begunnen op [[23 meert]] [[2006]] en ef noe {{NUMBEROFARTICLES}} artikels. Et internetadres van de Nedersaksiese Wikipedia is http://nds-nl.wikipedia.org/. De [[Engels]]e versie is et grootst en ef roem 3.500.000 artikels. In totaal waren der in [[15 jannewaori]] [[2011]] meer as 17 miljoen artikels te vinden op iel Wikipedia in 278 verskillende talen en streektalen. 
 
-Mijn konijn is 100000 geworden
+== Zie ok ==
+* [[Nedersaksiese Wikipedia]]
+* [[Platduutse Wikipedia]]
 
-{en het is het is echt waar
-  Amns
+{{Dialekt|ovel|Attem|Algemene Nedersaksiese Skriefwieze}}
+
 [[Kategorie:Wikipedie| ]]
 [[Kategorie:Organisaotie]]
