--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -96,7 +96,7 @@ O'Nolans journalistike pseudonym kümt van een personage (Myles-na-Coppaleen) in
 
 O'Nolan selv stünd der altyd up dat et oaversat wör as "Myles van de Ponys", ümdat hee, so sea hee, nit saggen wårümme de pony in syne prinselikheid sul mütten bügen vöär et imperialisme van et paerd.
 
-==Fiction==
+==Ficty==
 
 ===''At Swim-Two-Birds''===
 ''At Swim-Two-Birds'' warket uutslutend med eleynde (en estöllene) karakters uut andere skryvwarken en legendes, med als argument dat der al vöäls te vöäle fiktyve karakters beståt.
