--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -107,6 +107,14 @@ Et book wörd vandage den dag erkend as eyne van de belangrykste [[modernisme|mo
 
 Den britsken skryver [[Anthony Burgess]] sea, "as wy et wark van Flann O'Brien nit kuusterd sint wy dumme klöyte, dee et nit verdenet üm groute lüde te kennen. Flann O'Brien is nen heylen groten." Burgess had ''At Swim-Two-Birds'' by up syne lyste van ''Neagenenneagentig Böyke: et Beste in et Engelsk seyt 1939''.
 
+
+===''The Third Policeman'' en ''The Dalkey Archive''===
+De afwysing van ''The Third Policeman'' (Den Darden Polityman) döär uutgeavers had by leaven een deepgånd effekt up O'Nolan. Dat is möägelik te seen in ''The Dalkey Archive'', wårin as hee heyle stükke van ''Den Darden Polityman'' woord vöär woord herbruket, med name de atomiske teory en et karakter De Selby.
+
+''The Third Policeman'' hevt een fantasyryk plot, wårin et höyvdkarakter ymand vermoordet en terechte kümt in ne vrömde wearld med dikke politykearls. Underwyl wordt akademiske debatten up de hakke nöämen, med anteakeningen wårin verweasen wördt når eyne De Selby, nen bysünderen filosoof. Sergeant Pluck kümt med de atomiske teory van de fytse. 
+
+In ''The Dalkey Archive'' sit een karakter den as nen berouwvullen, ölderen en skynbår uneavenwichtigen [[James Joyce]] teagenkümt. Den düt in et book syn eygen wark af as 'ik hebbe weinig uut egeaven' en likt nit te weaten dat hee ''[[Finnegans Wake]]'' skreaven en uut egeaven hevt. Joyce warket as nen hülpbarman of ''curator'' - ne humoristiske verwysing når Joyce syne vermode preesterlike ambitys. Underwyl probeert den weatenskapper De Selby alle lucht uut de wearld te sugen, terwyl Sergeant Pluck van Sergeant Fottrell höyret oaver de mollekul-teory. ''The Dalkey Archive'' wör ümmeskreaven vöär teater in september 1965 döär [[Hugh Leonard]], under den titel ''The Saints Go Cycling In''.<ref>[http://www.irishplayography.com/play.aspx?playid=31428 Playography Ireland. The Saints Go Cycling In. Irish Theatre Institute.] Bekeaken up 21 april 2013.</ref>
+
 ==Referensys==
 <references/>
 
