Lucie Rakers was zwager (schoonsister) van Arnold Rakers

--- a/Lucie_Rakers.mw
+++ b/Lucie_Rakers.mw
@@ -1,4 +1,4 @@
-'''Lucie Rakers''' ([[Nordhorn]], [[Duutslaand]], 19 augustus 1905 - Nordhorn, 1993) was een schriefster in 't [[Graofschopper plat]], de [[Nedersaksisch]]e streektaal van de [[Graofschop Benthem]]. Ze was etrouwd mit de taalkundige [[Arnold Rakers]].
+'''Lucie Rakers''' ([[Nordhorn]], [[Duutslaand]], 19 augustus 1905 - Nordhorn, 1993) was een schriefster in 't [[Graofschopper plat]], de [[Nedersaksisch]]e streektaal van de [[Graofschop Benthem]]. Ze was zwager van de taalkundige [[Arnold Rakers]].
 
 Zi'j was doende bi'j de [[Heimatverein der Grafschaft Bentheim]] en hölp mit an uutgaves as ''Aule Knetsååm vertäild'' deur [[Heinrich Hensen]] (1976).
 
