--- a/Nedersaksisch_B.mw
+++ b/Nedersaksisch_B.mw
@@ -396,6 +396,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''bije''
 * [[Grönnegs]]: 
 **''iem'' 
+**''baai''
 **''bij'' (verhollaandst)
 * [[Oostfreisk]]:
 **''iem'' (Platduutske skriefwies: ''Imm'')
